修复捐赠问题；转移至AIDE项目

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="item_no_xposed">未发现Xposed</string>
     <string name="item_found_xposed">发现Xposed</string>
     <string name="about">由w568w开发... 最近微信的事儿闹得纷纷扬扬，这款应用可以让你了解你的防Xposed检测模块到底有没有效果。\\nDEBUG INFO:PID=%1$d</string>
-    <string name="donation">写这个应用也花了不少时间收集代码, 希望您能给我买根辣条，支持我后续的开发和防检测模块的开发进程...</string>
+    <string name="donation">写这个应用，也花了不少时间收集代码, 希望您能给开发者买根辣条，支持后续的开发...</string>
 </resources>
